Fixed - Alignment on homepage on banner ad

--- a/public/assets/css/_homepage.scss
+++ b/public/assets/css/_homepage.scss
@@ -218,7 +218,7 @@
     display: block;
     float: left;
     width: 300px;
-    margin-top: .6em; // line up ads and first story
+    margin-top: 10px;// line up ads and first story
   }
 }
 
